--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,18 @@
+.root {
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;
+    color: oklch(0.21 0.034 264.665);
+}
 
-._root {
+
+
+
+
+
+
+/* ._root {
     box-sizing: border-box;
     width: 100%;
     height: 100vh;
@@ -17,4 +30,4 @@
     width: 100%;
     height: 80px;
     background-color: #a5d8ff;
-}
+} */
