Sorting out the background animations and authentication positioning

--- a/components/btn-Help/btn.css
+++ b/components/btn-Help/btn.css
@@ -3,7 +3,7 @@
     width: 12rem;
     height: 3rem;
     background-color: #F9FAFB;
-    border-radius: 10px;
+    border-radius: .75rem;
     border: 2px solid #E5E7EB;
 }
 
@@ -26,5 +26,10 @@
     font-family: "ui-sans-serif", system-ui, sans-serif;
     Font-weight: 600;
     line-height: 1.25rem;
-    color: #1e293be2;
+    color: #101828;
+}
+
+#button:hover a  {
+  opacity: 0;
+  visibility: hidden;
 }
