--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,33 +1,60 @@
-.root {
-    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 36px;
-    color: oklch(0.21 0.034 264.665);
-}
-
-
-
-
-
-
-
-/* ._root {
+.container {
+    position: absolute;
+    font-family: "ui-sans-serif", system-ui, sans-serif;
     box-sizing: border-box;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    background-color: #ffd8a8;
+    width: 100vw;
+    height: 108vh;
 }
-._root__aside-bar {
-    width: 200px;
-    height: 90vh;
-    background-color: #b2f2bb;
-}
-._root__footer {
-    position: fixed;
-    bottom: 0;
+
+.root {
     width: 100%;
-    height: 80px;
-    background-color: #a5d8ff;
+    height: 100%;
+    z-index: 1;
+    position: relative;
+
+}
+
+.root__main {
+    height: 95%;
+    width: 28rem;
+    background-color: #898784;
+    z-index: 2;
+    position: absolute;
+    top: 1.25rem;
+    left: 28.2rem;
+}
+
+#login {
+    z-index: 3;
+    height: 14.125rem;
+    width: 28rem;
+    background-color: black;
+    position: relative;
+    position: absolute;
+    top: 1rem;
+    left: 28.2rem;
+    overflow: hidden;
+}
+
+/* #signup {
+    z-index: 3;
+    height: 19rem;
+    width: 25rem;
+    background-color: blue;
+    position: absolute;
+    bottom: 2.3rem;
+    left: 29.7rem;
+    overflow: hidden;
 } */
+
+
+#signup {
+    z-index: 3;
+    height: 23rem;
+    width: 28rem;
+    background-color: blue;
+    position: absolute;
+    bottom: 2.3rem;
+    left: 28.2rem;
+    overflow: hidden;
+}
