--- a/modules/login/login.css
+++ b/modules/login/login.css
@@ -1,5 +1,5 @@
-.signin-sheet {
-    background-color: red;
-    width: 100%;
-    height: 100%;
+.login-sheet {
+    background-color: black;
+    height: 40%;
+    width: 48rem;
 }
