--- a/modules/signup/signup.css
+++ b/modules/signup/signup.css
@@ -1,5 +1,5 @@
 .signup-sheet {
-    background-color: orange;
-    width: 100%;
-    height: 100%;
+    background-color: blue;
+    height: 40%;
+    width: 48rem;
 }
