--- a/components/btn-Help/btn.html
+++ b/components/btn-Help/btn.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/components/btn-Help/btn.css">
 
-<button id="button">
+<button id="button-help">
     <a href="#">
         <img src="/assets/images/svg/auth-svg/question-mark.svg" alt="A question mark">
         <span id="btnText">Help?</span>
