--- a/components/input-email/input.html
+++ b/components/input-email/input.html
@@ -4,7 +4,7 @@
     <label for="email">Email Address*</label>
     <span class="flex">
     <input type="email" name="email" id="email" placeholder="hello@example.com">
-    <img src="/assets/images/svg/auth-svg/email.svg" alt="Email icon">
+    <a href="#"><img src="/assets/images/svg/auth-svg/email.svg" alt="Email icon"></a>
 </span>
 </div>
 
