--- a/modules/login/login.css
+++ b/modules/login/login.css
@@ -1,4 +1,4 @@
-.login-page {
+section.login-page {
     border:2px solid black;
     height: 38.625rem;
     width: 28rem;
@@ -6,7 +6,8 @@
     top: 1.25rem;
     left: 28.2rem;
     overflow: hidden;
-    color: white;
-    background-color: black;
     z-index: 1;
+    box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.75);
 }
