--- a/modules/login/login.css
+++ b/modules/login/login.css
@@ -1,5 +1,5 @@
 section.login-page {
-    border:2px solid black;
+    /* border:2px solid black; */
     /* height: 38.625rem; */
     width: 28rem;
     position: absolute;
@@ -7,8 +7,8 @@ section.login-page {
     left: 28.2rem;
     overflow: hidden;
     z-index: 1;
-    box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.75);
+    box-shadow: -1px 5px 20px 0px rgba(195, 180, 180, 0.75);
+    -webkit-box-shadow: -1px 5px 20px 0px rgba(114, 98, 98, 0.75);
     -moz-box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.75);
 }
 
@@ -78,6 +78,17 @@ p {
     position: relative;
     flex-direction: column;
     margin: .625rem auto;
-    bottom: .625rem;
-    left: 1.25rem;
+    top: 1.1rem;
+    left: 1.4rem;
+}
+
+.button-imports {
+    display: flex;
+    flex-direction: row;
+}
+
+.import-btn1, .import-btn2 {
+    flex: 1;
+    width: 12.25rem;
+    height: 3rem;
 }
