--- a/components/input-email/input.html
+++ b/components/input-email/input.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="/components/input-email/input.css">
 
-<div>
+<div class="input-container">
     <label for="email">Email Address*</label>
-    <span class="flex">
-    <input type="email" name="email" id="email" placeholder="hello@example.com">
-    <a href="#"><img src="/assets/images/svg/auth-svg/email.svg" alt="Email icon"></a>
-</span>
+    <section class="input-wrapper">
+        <input type="email" name="email" id="email" placeholder="hello@example.com">
+        <a href="#"><img src="/assets/images/svg/auth-svg/mail_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="Email icon"></a>
+    </section>
 </div>
 
 <script src="/components/input-email/input.js"></script>
