--- a/components/input-email/input.css
+++ b/components/input-email/input.css
@@ -1,35 +1,41 @@
-div {
+.input-container {
     display: flex;
     flex-direction: column;
     font-family: "ui-sans-serif", system-ui, sans-serif;
     font-size: .875rem;
-    border: 1px solid blue;
     width: 25rem;
-    height: 4.375rem;
+    position: relative;
+    margin: 20px 0 0 0;
 }
 
-label {
+.input-container label {
+    margin: 0 0 0.25rem 0;
     font-weight: 500;
-    margin: 10px 0 40px 0;
-    margin: 0;
 }
 
-.flex {
+.input-wrapper {
+    position: relative;
     display: flex;
+    align-items: center;
 }
 
-input {
-    width: 25rem;
+.input-wrapper input {
+    width: 100%;
     height: 3rem;
-    margin-top: 3px;
     border-radius: .75rem;
-    padding-left: 2.875rem;
+    padding-left: 2.6rem;
 }
 
-img {
+.input-wrapper img {
     position: absolute;
-    left: 1.75rem;
+    left: 0.75rem;
+    top: 50%;
+    transform: translateY(-50%);
     width: 1.25rem;
     height: 1.25rem;
-    top: 2.59rem;
+}
+
+#password {
+    font-size: 1.35rem;
+    font-weight: 700;
 }
