--- a/components/input-name/input.html
+++ b/components/input-name/input.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="/components/input-email/input.css">
 
-<div>
+<div class="input-container">
     <label for="text">Full Name*</label>
-    <span class="flex">
+    <div class="input-wrapper ">
         <input type="text" name="text" id="text" placeholder="John Doe">
         <img src="/assets/images/svg/auth-svg/image.svg" alt="Image Icon">
-    </span>
+    </div>
 </div>
 
 <script src="/components/input-email/input.js"></script>
