--- a/components/input-password/input.html
+++ b/components/input-password/input.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="/components/input-email/input.css">
 
-<div>
+<div class="input-container">
     <label for="password">Password*</label>
-    <span class="flex">
+    <div class="input-wrapper">
         <input type="password" name="password" id="password" placeholder="........" minlength="6" maxlength="20">
         <img src="/assets/images/svg/auth-svg/lock (1).svg" alt="Image Icon">
-    </span>
+    </div>
 </div>
 
 <script src="/components/input-email/input.js"></script>
