--- a/modules/login/login.css
+++ b/modules/login/login.css
@@ -1,5 +1,4 @@
 section.login-page {
-    /* border:2px solid black; */
     /* height: 38.625rem; */
     width: 28rem;
     position: absolute;
@@ -74,21 +73,21 @@ p {
 }
 
 .login-page__form {
-    /* display: flex; */
     position: relative;
-    flex-direction: column;
     margin: .625rem auto;
-    top: 1.1rem;
+    top: 0.8rem;
     left: 1.4rem;
 }
 
 .button-imports {
     display: flex;
-    flex-direction: row;
+    gap: 1rem;
+    margin-top: 1rem;
 }
 
-.import-btn1, .import-btn2 {
+.button-imports .btn-help,
+.button-imports .btn-next-step {
     flex: 1;
-    width: 12.25rem;
-    height: 3rem;
+    /* width: 12.25rem;
+    height: 3rem; */
 }
