--- a/components/btn-Help/btn.css
+++ b/components/btn-Help/btn.css
@@ -1,4 +1,4 @@
-.btn-help {
+#btn-help {
     padding: 0.5rem 1rem;
     width: 12rem;
     height: 3rem;
@@ -9,9 +9,10 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    position: relative;
 }
 
-.btn-help img {
+#btn-help img {
     width: 1.125rem;
     height: 1.125rem;
 }
@@ -23,7 +24,8 @@
     color: #101828;
 }
 
-.btn-help:hover {
-  opacity: 0;
-  visibility: hidden;
+#btn-help:hover img,
+#btn-help:hover .btn-text {
+    opacity: 0;
+    visibility: hidden;
 }
