--- a/components/btn-Help/btn.html
+++ b/components/btn-Help/btn.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/components/btn-Help/btn.css">
 
-<button class="btn-help">
-        <img src="/assets/images/svg/auth-svg/question-mark.svg" alt="A question mark">
+<button id="btn-help">
+        <img src="/assets/images/svg/auth-svg/question-mark.svg" alt="A question mark" class="disappear">
         <span class="btn-text">Help?</span>
 </button>
