--- a/components/input-email/input.css
+++ b/components/input-email/input.css
@@ -11,6 +11,7 @@
 .input-container label {
     margin: 0 0 0.25rem 0;
     font-weight: 500;
+    color: #364153;
 }
 
 .input-wrapper {
@@ -24,6 +25,7 @@
     height: 3rem;
     border-radius: .75rem;
     padding-left: 2.6rem;
+    border: 1px solid #E5E7EB;
 }
 
 .input-wrapper img {
@@ -38,4 +40,15 @@
 #password {
     font-size: 1.35rem;
     font-weight: 700;
+}
+
+input:active {
+    background-color: #B5BDCB;
+    color: #ffffffb9;
+}
+
+input:focus {
+    outline: 1px solid #2e53fa8b;
+    box-shadow: 0px 0px 1px 3px #9dabeb83;
+    border: 1px solid #2e53faad;
 }
