--- a/components/input-email/input.html
+++ b/components/input-email/input.html
@@ -4,7 +4,7 @@
     <label for="email">Email Address*</label>
     <section class="input-wrapper">
         <input type="email" name="email" id="email" placeholder="hello@example.com">
-        <a href="#"><img src="/assets/images/svg/auth-svg/mail_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="Email icon"></a>
+        <a href="#"><img src="/assets/images/svg/auth-svg/mail (2).svg" alt="Email icon"></a>
     </section>
 </div>
 
