--- a/components/input-email/input.html
+++ b/components/input-email/input.html
@@ -3,9 +3,7 @@
 <div class="input-container">
     <label for="email">Email Address*</label>
     <section class="input-wrapper">
-        <input type="email" name="email" id="email" placeholder="hello@example.com">
+        <input type="email" name="email" id="email" placeholder="hello@example.com" autocomplete="email">
         <a href="#"><img src="/assets/images/svg/auth-svg/mail (2).svg" alt="Email icon"></a>
     </section>
 </div>
-
-<script src="/components/input-email/input.js"></script>
