--- a/components/input-name/input.html
+++ b/components/input-name/input.html
@@ -3,9 +3,7 @@
 <div class="input-container">
     <label for="text">Full Name*</label>
     <div class="input-wrapper ">
-        <input type="text" name="text" id="text" placeholder="John Doe">
+        <input type="text" name="text" id="text" placeholder="John Doe" autocomplete="username" required>
         <img src="/assets/images/svg/auth-svg/user.svg" alt="Image Icon">
     </div>
 </div>
-
-<script src="/components/input-email/input.js"></script>
