--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,3 +2,9 @@
     font-family: "ui-sans-serif", system-ui, sans-seri;
     font-size: 16px;
 }
+
+body {
+    overflow-x: hidden;
+    max-width: 1200px;
+    max-height: 1920px;
+}
