--- a/modules/background/backgd.css
+++ b/modules/background/backgd.css
@@ -3,7 +3,8 @@
     height: 110vh;
     display: flex;
     position: absolute;
-    z-index: 1;
+    /* background-image: url(/assets/images/svg/auth-svg/background.svg);
+    opacity: .3; */
 }
 
 .right, .left {
@@ -130,7 +131,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: #ffffffa3;
+    background-color: #f8f9fa8b;
     z-index: 2;
 }
 
